--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="max-width">
             <div class="intro-content">
                 <div class="text-1">Hey! There 🖐🏻....</div>
-                <div class="text-2">I am Roushan Shukla</div>
+                <div class="text-2">I am Raj Shukla</div>
                 
             </div>
         </div>
